--- a/src/components/MyForm.module.css
+++ b/src/components/MyForm.module.css
@@ -11,11 +11,13 @@
   }
   
   .formInput {
-    width: calc(100% - 10px);
+    width: 100%;
+    flex: 1;
     padding: 8px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    
   }
   
   .formButton {
